Media url with fragment may not load https://bugs.webkit.org/show_bug.cgi?id=74443

Reviewed by Darin Adler.

Source/WebCore:

Test: media/media-extension-with-fragment.html

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::loadResource): Pass the KURL to MediaPlayer, let it extract a
    String when it needs it.

* platform/graphics/MediaPlayer.cpp:
(WebCore::MediaPlayer::load): Take a KURL, not a String. Look for the file extension in the
    last path component so we don't examine fragments and/or queries.
* platform/graphics/MediaPlayer.h:

LayoutTests:

* media/media-extension-with-fragment-expected.txt: Added.
* media/media-extension-with-fragment.html: Added.


Canonical link: https://commits.webkit.org/91185@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102800 268f45cc-cd09-0410-ab3c-d52691b4dbfc